chore(security): permit /api/auth/** and /health, enforce stateless security and add CORS for frontend