@@ -7,18 +7,16 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -26,7 +24,6 @@ public class SecurityConfig {
 
     private final JwtService jwtService;
 
-    // JwtService is injected so we can register the JwtAuthenticationFilter
     public SecurityConfig(JwtService jwtService) {
         this.jwtService = jwtService;
     }
@@ -36,46 +33,36 @@ public class SecurityConfig {
         JwtAuthenticationFilter jwtFilter = new JwtAuthenticationFilter(jwtService);
 
         http
-            // disable CSRF for a stateless API using JWTs
             .csrf(csrf -> csrf.disable())
-
-            // enable CORS using our corsConfigurationSource bean
             .cors(Customizer.withDefaults())
-
-            // stateless session management (we use JWT)
+            // make the app stateless — JWT on every request
             .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-
-            // authorize requests: open health and auth endpoints, protect everything else
             .authorizeHttpRequests(auth -> auth
+                // permit health and auth endpoints for anonymous access
                 .requestMatchers("/health", "/api/auth/**", "/v3/api-docs/**", "/swagger-ui/**").permitAll()
+                // everything else requires authentication
                 .anyRequest().authenticated()
             );
 
-        // Register JWT filter before UsernamePasswordAuthenticationFilter
+        // ensure JWT filter runs before Spring's username/password filter
         http.addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
-    // Expose AuthenticationManager for later use (e.g., in AuthService)
-    @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
-        return config.getAuthenticationManager();
-    }
-
-    // Password encoder to hash passwords (BCrypt)
+    // password encoder for registering users
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 
-    // Simple CORS config for local frontend dev
+    // CORS config - allow frontend local origin
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration cfg = new CorsConfiguration();
-        cfg.setAllowedOrigins(Arrays.asList("http://localhost:5173")); // frontend dev origin
-        cfg.setAllowedMethods(Arrays.asList("GET","POST","PUT","DELETE","OPTIONS"));
-        cfg.setAllowedHeaders(Arrays.asList("Authorization","Content-Type"));
+        cfg.setAllowedOrigins(List.of("http://localhost:5173")); // frontend dev
+        cfg.setAllowedMethods(List.of("GET","POST","PUT","DELETE","OPTIONS"));
+        cfg.setAllowedHeaders(List.of("Authorization","Content-Type","Accept"));
         cfg.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
